// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs.Item renders correctly 1`] = `
<DocumentFragment>
  <li
    class="c-breadcrumbs__crumb"
    data-name="breadcrumbs-item"
  >
    <a
      href="/lorem"
    >
      lorem
    </a>
  </li>
</DocumentFragment>
`;

exports[`Breadcrumbs.Item renders correctly an active Item 1`] = `
<DocumentFragment>
  <li
    aria-current="page"
    class="c-breadcrumbs__crumb"
    data-name="breadcrumbs-item"
  >
    lorem
  </li>
</DocumentFragment>
`;
